--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<p align='left'>     <img src='https://static.wixstatic.com/media/85087f_0d84cbeaeb824fca8f7ff18d7c9eaafd~mv2.png/v1/fill/w_160,h_30,al_c,q_85,usm_0.66_1.00_0.01/Logo_completo_Color_1PNG.webp' </img> </p>",
   "main": "index.js",
   "scripts": {
-    "test": "jest --collectCoverage=false --testResultsProcessor ./.reporter/index.js --detectOpenHandles"
+    "test": "jest --collectCoverage=false --detectOpenHandles"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
@@ -12,9 +12,6 @@
   },
   "author": "Henry",
   "license": "ISC",
-  "jest": {
-    "testURL": "http://localhost/"
-  },
   "dependencies": {
     "axios": "^0.21.4",
     "git-remote-origin-url": "^3.1.0",
